# config-editor

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/core/: config-store.service.ts  csv-infer.service.ts  github.service.ts  local-backend.service.ts  theme.service.ts
src/app/editor-data/: data-preview.component.html  data-preview.component.scss  data-preview.component.ts
src/app/editor-labels/: labels-editor.component.html  labels-editor.component.scss  labels-editor.component.ts
src/app/editor-mapping/: mapping-editor.component.html  mapping-editor.component.scss  mapping-editor.component.ts
src/app/editor-modes/: modes-editor.component.html  modes-editor.component.scss  modes-editor.component.ts
src/app/editor-processing/: processing-editor.component.html  processing-editor.component.scss  processing-editor.component.ts  processing-graph.service.ts
src/app/editor-structure/: structure-editor.component.html  structure-editor.component.scss  structure-editor.component.ts
src/app/shell/: connect-dialog.component.html  connect-dialog.component.scss  connect-dialog.component.ts  shell.component.html  shell.component.scss  shell.component.ts  toolbar.component.html  toolbar.component.scss  toolbar.component.ts
src/styles/: styles.scss
