[package]
name = "config-editor"
version = "0.3.1"
description = "GestaltBI configuration editor"
authors = ["GestaltBI"]
edition = "2021"

[lib]
name = "config_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
